--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./lupa-png-removebg-preview.png">
         </div>
         <div class="login">
-            <h2>Login</h2>
+            <h2>LOGIN</h2>
         </div>
         
 
