--- a/index.html
+++ b/index.html
@@ -43,13 +43,24 @@
                 CONTACT
             </li>
         </ul>
-
-
     </header>
 
     <main>
+      <section class="back">
+         <img src="./background-removebg-preview.png" alt="">
+      </section>
 
+      <div class="title">
+        <h1>Discover Delicious Delights</h1>
+        <h2>Explore Our Mouthwatering Menu and Savor Every Bite</h2>
+      </div>
 
+    <div class="explore">
+        <p>Explore Foods</p>
+    </div>
+    <div class="reserve">
+        <p>Reserve Table</p>
+    </div>
     </main>
 
     <footer>
