--- a/index.html
+++ b/index.html
@@ -51,20 +51,31 @@
       </section>
 
       <div class="title">
+        <div class="disc">
         <h1>Discover Delicious Delights</h1>
+    </div>
+    <div class="title2">
         <h2>Explore Our Mouthwatering Menu and Savor Every Bite</h2>
-      </div>
-
+    </div>
+    </div>
+      
+    <div class="botoes">
     <div class="explore">
         <p>Explore Foods</p>
     </div>
     <div class="reserve">
         <p>Reserve Table</p>
     </div>
+    </div>
+    <div class="pizza">
+        <img src="./image-removebg-preview.png" alt="">
+    </div>
+    
+   
+   
     </main>
 
     <footer>
-
     </footer>
 </body>
 
